Some Java 11 changes